@@ -1,6 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
 2012-12-13  mmichaud <michael.michaud@free.fr>
+  * Move Vertex Cursor Tool : double click will now insert a vertex (Feature
+    request submitted by Andrei Nacu). Could not get rid of the warnig though.
+  
+2012-12-13  mmichaud <michael.michaud@free.fr>
   * Change jts-1.12 to jts-1.13
 
 2012-12-12  Giuseppe Aruta (giuseppe_aruta@yahoo.it)
